[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.1", features = ["postgres"] }
dotenvy = "0.15"
rustling-derive = { path = "../rustling-derive" }
rustling-data = { path = "../rustling-data" }
repository = "0.0.2"
serde = { version = "1.0.227", features = ["derive"] }
sqlx = "0.7.4"
tokio = "1.47.1"
async-trait = "0.1.89"
anyhow = "1.0.100"
mongodb = "3.3.0"
collection = "0.1.1"
bson = "2.15.0"
futures = "0.3"