[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
rustling-derive = { path = "../rustling-derive" }
rustling-data = { path = "../rustling-data" }
serde = { version = "1.0.227", features = ["derive"] }
sqlx = "0.8.6"
tokio = "1.47.1"
async-trait = "0.1.89"
anyhow = "1.0.100"
bson = "2.15"