[package]
name = "rustling-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rustling-api = { path = "../rustling-api" }  # adjust path as needed
tokio = { version = "1", features = ["full"] }