[package]
name = "rustling-data"
version = "0.1.0"
edition = "2024"
authors = ["Andrii Kovalov <andreyykovalev@gmail.com>"]
description = "Core data access layer for Rustling, supporting PostgreSQL and MongoDB"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andreyykovalev/rustling-data"
homepage = "https://github.com/andreyykovalev/rustling-data"
documentation = "https://docs.rs/rustling-data"
keywords = ["rust", "database", "repository", "postgres", "mongodb"]
categories = ["database", "asynchronous"]
readme = "../README.md"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.47.1", optional = true, features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.69"

# Postgres feature
sqlx = { version = "0.8.6", optional = true, features = ["postgres", "runtime-tokio-native-tls", "macros"] }

# Mongo feature
mongodb = { version = "3.3.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
testcontainers-modules = { version = "0.7", features = ["postgres", "mongo"] }
futures-util = "0.3"

[features]
default = []
postgres = ["sqlx", "tokio"]
mongo = ["mongodb", "tokio"]
full = ["postgres", "mongo"]